add link to publisher's PDF excerpt

--- a/HEBR/3013.tex
+++ b/HEBR/3013.tex
@@ -146,7 +146,9 @@ All required texts are available in the Tyndale Bookstore.
   \bibitem[Ben Zvi]{bz}
     Ehud Ben Zvi, Maxine Hancock and Richard Beinert. \emph{Readings in
     Biblical Hebrew: An Intermediate Textbook}. Yale Language Series.
-    New Haven: Yale University Press, 1993.
+    New Haven: Yale University Press, 1993. The publisher offers a
+    \href{http://yalepress.yale.edu/yupbooks/languages/pdf/Zvi_excerpt.pdf}%
+    {free PDF of the first reading}.
 \end{thebibliography}
 \endgroup
 
