make some wording less obtuse

--- a/BSTH/1013.tex
+++ b/BSTH/1013.tex
@@ -101,7 +101,7 @@ course pack is available in class, directly from Dr. Driver.
     Scripture}. Grand Rapids: Baker Academic, 2013. Read these eight
     essays by a leading Old Testament scholar and theologian in parallel
     with the assigned Bible readings. It will be best if you read the
-    primary texts first, of course.
+    primary texts first.
   \bibitem[Driver]{driver} Daniel R. Driver.
     \emph{\ctitle\ Introductory Course Pack}. Toronto, \csemester.
     In response to the requests of many students, I have compiled a pack
@@ -192,9 +192,9 @@ The breakdown for the semester's total work is as follows:
 \section{Course Outline}
 \label{outline}
 
-Readings of a given day should be completed before the start of class on
-the same date. Primary readings, Heschel and Moberly are compulsory. Any
-supplementary readings that I circulate (per
+Readings should be completed before the start of the class for which
+they are assigned. Primary readings, Heschel and Moberly are compulsory.
+Any supplementary readings that I circulate (per
 Section~\ref{supplementary}) will be keyed to the session number (listed
 under \textbf{\S} in Table~\ref{schedule}), and should ideally be read
 before class as well. We will adhere to the schedule as closely as
