--- a/template/000_template.tex
+++ b/template/000_template.tex
@@ -242,10 +242,10 @@ The breakdown for the semester's total work is as follows:
 \section{Course Outline}
 \label{outline}
 
-Readings of a given day should be completed before the start of class
-on the same date. Primary readings are compulsory. Any supplementary
-readings that I circulate (see Section~\ref{supplementary}) will
-be keyed to the session number (listed under \textbf{\S} in
+Readings should be completed before the start of the class for which
+they are assigned. Primary readings are compulsory. Any supplementary
+readings that I circulate (see Section~\ref{supplementary}) will be
+keyed to the session number (listed under \textbf{\S} in
 Table~\ref{schedule}), and should ideally be read before class as well.
 We will adhere to the schedule as closely as possible, though I reserve
 the right to adjust it to suit the needs of the class.
