--- a/policy/grades.tex
+++ b/policy/grades.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{grades.tex}[2013/08/19 v1.0 -- Course policy]
+\ProvidesFile{grades.tex}[2013/09/02 v1.0.1 -- Course policy]
 
 \subsection{Grading System at Tyndale}
 \label{grades}
@@ -7,7 +7,7 @@ Tyndale University College provides these benchmarks for summative assessment.
 I may furnish more detailed rubrics for particular assignments.
 
 \mparshift{0.5\baselineskip}
-\marginpar{
+\marginpar{\lining
 \footnotesize
 \begin{tabular}[t]{@{}>{\scshape}c@{\hspace{1em}}c@{\hspace{1em}}c@{}}
   \toprule
