actually used lining figs, and set headings in small caps

--- a/includes/preamble.tex
+++ b/includes/preamble.tex
@@ -6,12 +6,12 @@
 \setmainfont[%
   Numbers={Proportional,OldStyle},
   SmallCapsFeatures={RawFeature=+c2sc;+smcp,LetterSpace=1}]{Scala OT}
-\newfontfamily\lining[Numbers={Monospaced}]{Scala OT}
+\newfontfamily\lining[Numbers={Lining}]{Scala OT}
 \setsansfont[%
   SmallCapsFeatures={RawFeature=+c2sc;+smcp,LetterSpace=1}]{Scala Sans Pro}
 \setmonofont[Scale=MatchLowercase]{Menlo}
 \usepackage{sectsty}
-\allsectionsfont{\sffamily}
+\allsectionsfont{\sffamily\scshape}
 \frenchspacing
 \setlength{\emergencystretch}{3em} % prevent overfull lines
 
