final revisions to Fall 2014 policy and template

--- a/policy/assignments.tex
+++ b/policy/assignments.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{assignments.tex}[2014/08/04 v1.1 -- Course policy]
+\ProvidesFile{assignments.tex}[2014/09/02 v1.1 -- Course policy]
 
 \subsection{Assignments}
 \label{assignments}
@@ -18,8 +18,8 @@ feedback are integral to the writing process. Inexperienced writers are often
 unaware that their surface-level errors create credibility problems with their
 readers. When you \href{http://theoatmeal.com/comics/misspelling}{misspell
 common words}, fail to know \href{http://theoatmeal.com/comics/apostrophe}{how
-to use an apostrophe}, or do not bother to credit your sources appropriately,
-why should your readers trust you with more important matters---the facts and
+to use an apostrophe}, or do not bother to cite your sources correctly, why
+should your readers trust you with more important matters like the facts and
 ideas under discussion?
 
 \subsubsection{Deadlines}
@@ -44,9 +44,9 @@ management' or `over-involvement' in an extracurricular activity.''
 Papers and some other assignments in this course are to be submitted
 electronically through the course pages (Section~\ref{mytyndale}). To preserve
 formatting, formal writing assignments must be uploaded in Portable Document
-Format. There are many ways of creating PDFs; it is your responsibility to know
-how to do so on the computer platform you use, and to make and submit your PDFs
-on time.
+Format. There are many ways of creating PDFs; it is your responsibility to
+know how to do so on the computer platform you use, and to generate and submit
+your PDFs on time.
 
 \subsubsection{Backup}
 \label{backup}
