--- a/policy/attendance.tex
+++ b/policy/attendance.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{attendance.tex}[2013/08/22 v1.0 -- Course policy]
+\ProvidesFile{attendance.tex}[2014/09/02 v1.1 -- Course policy]
 
 \subsection{Attendance}
 \label{attendance}
@@ -14,10 +14,11 @@ to many other colleges and universities). The University College publishes
 guidelines for how attendance should bear on your final evaluation in a course,
 and I adhere to them. Note that four lates equals one absence.
 
-What should you do if you miss an undue number of classes? First, arrange for
-a classmate to brief you on the material missed, or get my permission for a
-classmate to make a recording for you (see Section~\ref{recording}). Second,
-notify the Dean of Students in person or by phone. If illness is the cause you
-will need to submit a doctor's certificate upon return. The Dean of Students
-will notify your professors of the reason for the absence and suggest that they
-take this into consideration when assigning grades.
+What should you do if you miss an undue number of classes? First, if possible,
+arrange for a classmate to brief you on the material missed, or get my
+permission for a classmate to make a recording for you (see
+Section~\ref{recording}). Second, promptly notify the Dean of Students in
+person or by phone. If illness is the cause you will need to submit a doctor's
+certificate upon return. The Dean of Students will notify your professors of
+the reason for the absence and suggest that they take this into consideration
+when assigning grades.
