--- a/policy/technology.tex
+++ b/policy/technology.tex
@@ -1,10 +1,10 @@
-\ProvidesFile{technology.tex}[2014/08/04 v1.1 -- Course policy]
+\ProvidesFile{technology.tex}[2014/09/02 v1.1 -- Course policy]
 
 \subsection{Technology}
 \label{technology}
 
 Technological innovation has brought students and educators a number of
-powerful new tools, and I encourage you to use them as you research, write and
+powerful new tools, and I encourage you to use them as you research, write, and
 collaborate. Some of these tools also call for disciplined use and management.
 
 \subsubsection{Email}
@@ -12,17 +12,24 @@ collaborate. Some of these tools also call for disciplined use and management.
 
 Email can be a chore, and you may prefer other channels of communication. As a
 matter of policy, however, students must use their myTyndale accounts for all
-course-related email correspondence. Durring term time you should check your
-school account at least once a day (optional on weekends).
+course-related email correspondence. During term time you should check your
+school account at least once a day (optional on weekends). I myself aim to
+check my school email at the beginning and end of each workday. At other times
+my email client is often closed. I will try to answer your messages within 24
+hours, though you should not expect replies on weekends.
 
-I myself aim to check my school email at the beginning and end of each workday.
-At other times my email client is often closed. I will try to answer your
-messages within 24 hours, though you should not expect replies on weekends.
+Try to keep your messages topical and brief. I would vastly prefer to conduct
+any conversations of substance in person, or else over the phone. Please note
+and make use of my office hours. I would happily receive an email from you
+requesting an alternate meeting time if my regular hours do not suit your
+schedule.
+
+% Note the prof who adopted an anti-email policy! https://www.insidehighered.com/news/2014/08/27/sake-student-faculty-interaction-professor-bans-student-email?utm_source=slate&utm_medium=referral&utm_term=partner
 
 \subsubsection{MyTyndale.ca / classes.tyndale.ca}
 \label{mytyndale}
 
-Tyndale's course pages are an efficient means of distributing handouts, notes,
+Tyndale's course pages are an efficient means of distributing articles, notes,
 slides, and other course-related materials. This is also where instructors log
 attendance and upload grades for assignments. Students are therefore required to
 check the site for updates about their classes as well as for any materials
@@ -70,15 +77,14 @@ machine in airplane mode while class is in session.
 \subsubsection{Recording of Classes}
 \label{recording}
 
-Students must request permission from the professor of any class that they would
-like to record. Where permission is granted, students are expected to supply
-their own equipment.
-
-I prefer not to have my classes recorded, and I am not at all friendly to being
-recorded without my knowledge. In cases where I grant permission, I stipulate
-that the recordings must be for personal use only. They should not be shared
-with other students at Tyndale, even in the same section, and they absolutely
-must not be posted online in any format.
+Students must request permission from the professor of any class that they
+would like to record. Where permission is granted, students are expected to
+supply their own equipment. In general I prefer \emph{not} to have my classes
+recorded, and I am not at all friendly to being recorded without my knowledge.
+In cases where I grant permission, I stipulate that the recordings must be for
+personal use only. They should not be shared with other students, even with
+students in the same section, and they absolutely must not be posted online or
+otherwise distributed.
 
 If a student is not able to attend a lecture and would like to have it recorded,
 it is the responsibility of the student first to obtain the professor's
