--- a/policy/grades.tex
+++ b/policy/grades.tex
@@ -1,29 +1,32 @@
-\ProvidesFile{grades.tex}[2013/09/02 v1.0.1 -- Course policy]
+\ProvidesFile{grades.tex}[2014/09/02 v1.1 -- Course policy]
 
 \subsection{Grading System at Tyndale}
 \label{grades}
 
-Tyndale University College provides these benchmarks for summative assessment.
-I may furnish more detailed rubrics for particular assignments.
+Tyndale University College provides the following general benchmarks for
+summative assessment. I may furnish more detailed rubrics for particular
+assignments. Note also (at right) the percentage ranges and grade point values
+for letter grade designations.
 
 \mparshift{0.5\baselineskip}
 \marginpar{\lining
 \footnotesize
 \begin{tabular}[t]{@{}>{\scshape}c@{\hspace{1em}}c@{\hspace{1em}}c@{}}
   \toprule
-  +           & 90--100 & 4.00 \\
-  a           & 85--89  & 4.00 \\
-  \char"2212  & 80--84  & 3.70 \\ [1ex]
-  +           & 77--79  & 3.30 \\
-  b           & 73--76  & 3.00 \\
-  \char"2212  & 70--72  & 2.70 \\ [1ex]
-  +           & 67--69  & 2.30 \\
-  c           & 63--66  & 2.00 \\
-  \char"2212  & 60--62  & 1.70 \\ [1ex]
-  +           & 57--59  & 1.30 \\
-  d           & 53--56  & 1.00 \\
-  \char"2212  & 50--52  & 0.70 \\ [1ex]
-  f           & 0--49   & 0.00 \\
+  & \emph{percent} & \emph{pts.} \\ [1ex]
+  +           & 90--100   & 4.00 \\
+  a           & 85--89    & 4.00 \\
+  \char"2212  & 80--84    & 3.70 \\ [1ex]
+  +           & 77--79    & 3.30 \\
+  b           & 73--76    & 3.00 \\
+  \char"2212  & 70--72    & 2.70 \\ [1ex]
+  +           & 67--69    & 2.30 \\
+  c           & 63--66    & 2.00 \\
+  \char"2212  & 60--62    & 1.70 \\ [1ex]
+  +           & 57--59    & 1.30 \\
+  d           & 53--56    & 1.00 \\
+  \char"2212  & 50--52    & 0.70 \\ [1ex]
+  f           & 0--49     & 0.00 \\
   \bottomrule
 \end{tabular}}
 
