tweak wording of email policy

--- a/policy/technology.tex
+++ b/policy/technology.tex
@@ -18,11 +18,10 @@ check my school email at the beginning and end of each workday. At other times
 my email client is often closed. I will try to answer your messages within 24
 hours, though you should not expect replies on weekends.
 
-Try to keep your messages topical and brief. I would vastly prefer to conduct
-any conversations of substance in person, or else over the phone. Please note
-and make use of my office hours. I would happily receive an email from you
-requesting an alternate meeting time if my regular hours do not suit your
-schedule.
+Keep your messages topical and brief. I would vastly prefer to conduct any
+conversations of substance in person, or else over the phone. Please note and
+make use of my office hours. If these hours do not suit your schedule, I would
+happily receive an email from you requesting an alternate meeting time.
 
 % Note the prof who adopted an anti-email policy! https://www.insidehighered.com/news/2014/08/27/sake-student-faculty-interaction-professor-bans-student-email?utm_source=slate&utm_medium=referral&utm_term=partner
 
