--- a/BSTH/1013.tex
+++ b/BSTH/1013.tex
@@ -1,6 +1,5 @@
-% !TEX TS-program = XeLaTeX
-% !TEX encoding = UTF-8 Unicode
-% Copyright (c) 2014 by Daniel R. Driver. All rights reserved.
+% -*- program: xelatex -*-
+% -*- pdf: BSTH_1013_Driver_F14 -*-
 
 \documentclass[titlepage]{article}
 % clone the necessary input files: git@github.com:danieldriver/syllabus.git
@@ -8,11 +7,11 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[7.0-WIP]{BSTH 1013}
+\coursecode[7.0]{BSTH 1013}
 \coursetitle{Old Testament Scripture}
 
 \professor{Daniel R. Driver}
-\phone{416.226.6620 x2201}
+\phone{416-226-6620 ext. 2201}
 \email{ddriver@tyndale.ca}
 \officehours{Mon. \& Thur., 1:30--3:30 \PM}
 
@@ -46,24 +45,19 @@ student's ability to meet specific goals (learning objectives). By the
 end of the course students should be able to:
   name major Old Testament people and events;
   identify representative biblical quotes by book and chapter;
-  give key dates for Israel's history and summarize the succession of
-    superpowers in the Ancient Near Eastern political theatre from the
-    time of Egypt to Greece;
-%  contrast inner- and extra-biblical dating schemes;
-  locate ancient Israel on a map;
-  understand the general shape of the Masoretic Text tradition and
-    differentiate it from other canonical orders and traditions;
-  recognize genres of biblical literature and cite examples from the
-    reading;
+  give key dates for Israel's history and summarize the succession of superpowers in the Ancient Near Eastern political theatre from the time of Egypt to Greece;
+  locate a few important biblical sites on a map;
+  understand the general shape of the Masoretic Text tradition and differentiate it from other canonical orders and traditions;
+  recognize genres of biblical literature and cite examples from the reading;
   list the Ten Commandments in order;
   articulate multiple rationales for sabbath observance;
   defend a decision to pronounce or circumlocute the divine name;
   classify prophetic literature relative to the exile;
-%  report on instances of duplication in both the Law and the Prophets;
+  report on apparent parallels, synchronisms, tensions, and contradictions in and across the Law and the Prophets;
   memorize and recite Psalm 8.
 
 Students should also be able to identify settings in which the
-scriptures of Israel are read (notably the synagogue, church and
+scriptures of Israel are read (notably the synagogue, church, and
 academy), employ terminology appropriate to these reading communities,
 recognize where their own biographies and commitments place them in
 relation to the Hebrew Bible/Old Testament and its uses, and monitor and
@@ -79,7 +73,7 @@ the Old Testament retains along side of the New in Christian scripture.
 \label{texts}
 
 All required textbooks are available in the Tyndale Bookstore. The
-course pack is available in class, directly from Dr. Driver.
+coursepack is available in class, directly from Dr. Driver.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
@@ -96,16 +90,15 @@ course pack is available in class, directly from Dr. Driver.
     20\textsuperscript{th} century Jewish spirituality on your own, no
     later than the fourth week of class. Review it in preparation for the
     class on which it is assigned.
-  \bibitem[Moberly]{Moberly} R.\,W.\,L. Moberly.
+  \bibitem[Moberly]{moberly} R.\,W.\,L. Moberly.
     \emph{Old Testament Theology: Reading the Hebrew Bible as Christian
     Scripture}. Grand Rapids: Baker Academic, 2013. Read these eight
-    essays by a leading Old Testament scholar and theologian in parallel
-    with the assigned Bible readings. It will be best if you read the
-    primary texts first.
-  \bibitem[Driver]{driver} Daniel R. Driver.
-    \emph{\ctitle\ Introductory Course Pack}. Toronto, \csemester.
-    In response to the requests of many students, I have compiled a pack
-    of notes for this class. I will circulate the relevant pages before
+    essays by a leading Old Testament scholar and biblical theologian in
+    parallel with (but after completing) the assigned Bible readings.
+  \bibitem[OTSIC]{otsic} Daniel R. Driver.
+    \emph{\ctitle\ Introductory Coursepack}. Toronto, \csemester.
+    In response to the requests of many students I have compiled a pack
+    of notes for my lectures. I will circulate the relevant pages before
     each class. It behooves you to gather, annotate, and study this
     material carefully.
 \end{thebibliography}
@@ -115,7 +108,7 @@ course pack is available in class, directly from Dr. Driver.
 \label{supplementary}
 
 Supplementary readings are listed in the bibliographies that follow each
-page of notes in the course pack. Excerpts from this literature,
+page of notes in the coursepack. Excerpts from this literature,
 ordinarily an article or a book chapter per week, will be available for
 download through the course website (alternately, some may be kept on
 reserve in the library). Students are not strictly required to read this
@@ -126,7 +119,7 @@ Note that the required readings for this survey emphasize a selection of
 primary texts from the Old Testament. Reading in the vast body of
 secondary literature on the Bible is largely left for upper-division
 courses. Diligent students, however, and all prospective majors, will
-make a special point of reviewing the supplementary material carefully.
+make a special point of reviewing the supplementary articles.
 
 \section{Evaluation}
 \label{evaluation}
@@ -139,26 +132,29 @@ make a special point of reviewing the supplementary material carefully.
    \textbf{reading quizzes}. They are designed to ensure that you have
    read the assigned material carefully, and may be administered online
    (outside of class) or on paper (in class). Online quizzes are open
-   book, but they are timed, and only a single attempt is allowed.
-   Quizzes given in class may not be made up in the case of absence.
- \item Students are to \textbf{memorize Psalm 8} in the KJV and recite
-   it to me privately, in my office, in the fourth or fifth week of
-   class. A sign-up sheet will be circulated in week three.
+   book, but they are timed and limited to a single attempt. Quizzes
+   given in class are closed book, and they may not be made up in the
+   case of absence.
+ \item Students are to \textbf{memorize Psalm 8} in the King James
+   Version (KJV) and recite it to me privately, in my office, in the
+   fourth or fifth week of class. An online sign-up sheet will be posted
+   to the class website in week three.
  \item A \textbf{midterm exam} will be given in class as scheduled in
    the course outline (Section~\ref{outline}). At the instructor's
    option, it may include a take-home writing component.
  \item A comprehensive \textbf{final exam} will be held during the exam
    period as schedule by the Registrar (see Section~\ref{exams}). It is
-   designed to assess learning outcomes---how well you have obtained the
-   objectives outlined in Section~\ref{outcomes}. Test your readiness
-   for the final by asking yourself how well you can perform the tasks
-   outlined in those paragraphs.
+   designed to assess learning outcomes, i.e., your attainment of the
+   objectives in Section~\ref{outcomes}. Test your readiness for the
+   final by asking yourself how well you can perform the tasks outlined
+   in those paragraphs.
 \end{enumerate}
 
 The breakdown for the semester's total work is as follows:
 
 \begin{table}[htbp]
   \centering
+  {\lining
   \begin{tabular}{lr}
     \toprule
     Reading Quizzes & 25\% \\
@@ -166,7 +162,7 @@ The breakdown for the semester's total work is as follows:
     Midterm Exam    & 30\% \\
     Final Exam      & 30\% \\
     \bottomrule
-  \end{tabular}
+  \end{tabular}}
   \caption{Distribution of Grades}
   \label{distribution}
 \end{table}
@@ -192,24 +188,21 @@ The breakdown for the semester's total work is as follows:
 \section{Course Outline}
 \label{outline}
 
-Readings should be completed before the start of the class for which
-they are assigned. Primary readings, Heschel and Moberly are compulsory.
-Any supplementary readings that I circulate (per
-Section~\ref{supplementary}) will be keyed to the session number (listed
-under \textbf{\S} in Table~\ref{schedule}), and should ideally be read
-before class as well. We will adhere to the schedule as closely as
-possible, though I reserve the right to adjust it to suit the needs of
-the class.
-
-\newcommand\Yhwh{\textsc{Yhwh}}
-\newcommand\rarr{\char"2192\hspace*{0.5pt}}
+Readings should be completed before the start of the class for which they are
+assigned. Primary readings (from scripture) and required secondary texts
+(Heschel and Moberly) are compulsory. Any supplementary readings that I
+circulate (per Section~\ref{supplementary}) will be keyed to the session
+number (listed under \textbf{\S} in Table~\ref{schedule}), and should ideally
+be read before class as well. We will adhere to the schedule as closely as
+possible, though I reserve the right to adjust it to suit the needs of the
+class.
 
 \setcolumncount{4} % set up \sessioncount, \unit{} and \noclass{} macros
 \begin{table}[htb]
   \centering
   \begin{tabular}{>{\sessioncount.}r@{ }llr}
     \toprule
-    \sessionskip{\textbf{\S}.}&\textbf{Primary Reading}&\textbf{Secondary Reading}&\textbf{Date}\\
+    \sessionskip{\textbf{\S}.}&\textbf{Primary Reading or Event}&\textbf{Secondary Reading}&\textbf{Date}\\
     \midrule
 
     \unit{Beginnings} \\
@@ -226,6 +219,7 @@ the class.
           
           & Exodus 7--24                    & Moberly 3        & 23 Sep.     \\
           & Exodus 20, Deuteronomy 5        & Heschel (finish) & 25 Sep.     \\
+    \reminder{\textbf{Recitation of Psalm 8} (during Dr. Driver's office hours)}{\emph{from} 25 Sep.} \\ 
           
           & Deuteronomy 1--11               & Moberly 1        & 30 Sep.     \\
           & Deuteronomy 12--26              &                  &  2 Oct.     \\
@@ -239,8 +233,10 @@ the class.
           & Judges 1--16, 19--21            & Moberly 4        & 14 Oct.     \\
           & 1 Samuel 1--15                  &                  & 16 Oct.     \\
           
-          & \textbf{Midterm Exam} (\& Essay Due If Assigned) & & 21 Oct.     \\
+          & \textbf{Midterm Exam} (given in class) &           & 21 Oct.     \\
     \noclass{Reading Days}                                     & 23--24 Oct. \\
+    \reminder{\textbf{Take-home Essay Due} (submit PDF online)}{24 Oct.} \\
+
     
           & 1 Samuel 16--31, 2 Samuel 1--12 &                  & 28 Oct.     \\
           & 1 Kings 1--14                   &                  & 30 Oct.     \\
@@ -249,7 +245,7 @@ the class.
     \unit{Latter Prophets} \\
           & Isaiah 1--12, 36--39            & Moberly 5        &  6 Nov.     \\
 
-          & Hosea 1-14, Joel 1--3           &                  & 11 Nov.     \\
+          & Hosea 1--14, Joel 1--3          &                  & 11 Nov.     \\
           & Amos 1--9, Obadiah, Jonah 1--4  & Moberly 6        & 13 Nov.     \\ [1ex]
           
     \unit{Wisdom \& Praise} \\
@@ -258,25 +254,25 @@ the class.
           & Job 27--31, 38--42              & Moberly 8        & 20 Nov.     \\ 
           
           & Ecclesiastes 1--12              &                  & 25 Nov.     \\
-          & Psalms 1--2, 44, 51, 72--73, 89--90, 105--106, 145, 150 & Moberly 7 & 27 Nov. \\ [1ex]
+          & Psalms 1--2, 44, 72--73, 89--90, 105--106, 150 & Moberly 7 & 27 Nov. \\ [1ex]
           
-    \noclass{Reading Days}                                               & 2--3 Dec.   \\
+    \noclass{Reading Days}                                     & 2--3 Dec.   \\
+    \reminder{\textbf{Final Exam} (as schedule by the Registrar)}{4--11 Dec.} \\
     \bottomrule
   \end{tabular}
   \caption{Schedule of Readings}
   \label{schedule}
 \end{table}
 
-See the \href{http://www.tyndale.ca/registrar/important-dates}{%
-Registrar's website} for a list of other important dates. Generally, the
-last day to add or drop a class without penalty is the end of the second
-week of class.
+See the \href{http://www.tyndale.ca/registrar/important-dates}{Registrar's
+website} for a list of other important dates. The last day to add a class, or
+to drop one without penalty, is ordinarily the end of the term's second week.
 
 \section{Course Bibliography}
 \label{bibliography}
 
 An introductory bibliography is provided at the end of each page of
-notes in the course pack. Pursue this material as your interest
+notes in the coursepack. Pursue this material as your interest
 dictates, or if you wish to check my handling of any of the material I
 present. Pay special attention to items flagged as supplementary reading
 (Section~\ref{supplementary}).
